# MAT281_2021

./: .buildinfo  .gitignore  README.md  _config.yml  _toc.yml  genindex.html  index.html  index.md  objects.inv  pyproject.toml  search.html  searchindex.js
_sources/: index.md
_sources/mat281/labs/: lab_01.ipynb  lab_02.ipynb  lab_03.ipynb  lab_05.ipynb  lab_06.ipynb  lab_07.ipynb  lab_09.ipynb  lab_10.ipynb  lab_11.ipynb
_sources/mat281/lectures/basic_tools/: lecture_000_configuraciones.ipynb  lecture_000_intro.ipynb  lecture_011_os.md  lecture_012_python.ipynb  lecture_013_ide.md  lecture_014_jupyter.ipynb  lecture_015_git.md  lecture_016_venv.md
mat281/homeworks/: hw_01.html  hw_01.ipynb  hw_02.html  hw_02.ipynb
mat281/labs/: lab_01.html  lab_02.html  lab_03.html  lab_04.html  lab_05.html  lab_06.html  lab_07.html  lab_08.html  lab_08.ipynb  lab_09.html  lab_10.html  lab_11.html
mat281/lectures/basic_tools/: lecture_000_configuraciones.html  lecture_000_intro.html  lecture_011_os.html  lecture_012_python.html  lecture_013_ide.html  lecture_014_jupyter.html  lecture_015_git.html  lecture_016_venv.html
mat281/lectures/data_manipulation/data_manipulation/: base_datos.html
mat281/lectures/data_manipulation/eda/: eda.html  intro.html  intro.md
mat281/lectures/data_manipulation/scientific_computing/: numpy.html  scipy.html  sympy.html
mat281/lectures/ml/analisis_no_supervisado/: 03_clustering.html  03_reduccion_dimensionalidad.html
mat281/lectures/ml/introduccion_ml/: introduccion.html  (+4 more)
mat281/project/: project_definition.html  project_definition.ipynb
(+24 files in other folders)
