[tool.poetry]
name = "mat281_2021"
version = "0.1.0"
description = "Aplicaciones de la Matematica en la Ingenieria"
authors = ["Francisco Alfaro <francisco.alfaro.496@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
jupyterlab = "*"
jupyter-book = "*"
numpy = "^1.20.3"
pandas = "^1.2.4"
matplotlib = "^3.4.2"
seaborn = "^0.11.1"
scikit-learn = "^0.24.2"
statsmodels = "^0.13.0"





